energy env in gitignore

--- a/3_testing.ipynb
+++ b/3_testing.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -37,11 +37,11 @@
      "text": [
       "warning: LF will be replaced by CRLF in 3_testing.ipynb.\n",
       "The file will have its original line endings in your working directory\n",
-      "[master c88de825] energy env in gitignore\n",
-      " 4 files changed, 727 insertions(+), 79318 deletions(-)\n",
-      " rewrite 3_testing.ipynb (97%)\n",
+      "[master 7296991a] energy env in gitignore\n",
+      " 2 files changed, 179 insertions(+), 172 deletions(-)\n",
+      " rewrite data_update_script.py (94%)\n",
       "To https://github.com/thekhan314/CrudeOilApp.git\n",
-      "   e1bbb64d..c88de825  master -> master\n"
+      "   c88de825..7296991a  master -> master\n"
      ]
     }
    ],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,6 +79,70 @@
     "\n",
     "#test_bulk = jsons_to_frame(path,relpath,conn)\n",
     "#test_bulk.to_csv('data/nyt_api/nyt_articles.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lates News\n",
+    "last_archive_date= \"2020-11-05 17:54:49.445231\"\t\n",
+    "end_date = str(dt.datetime.now())\n",
+    "\n",
+    "query = 'Oil (Petroleum) and Gasoline'\n",
+    "\n",
+    "recents_call = nytResp(last_archive_date,end_date,query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                                                  id                 Date  \\\n",
+       "0  nyt://article/3700d15f-8708-51a9-8c90-a71fe280...  2020-11-05 08:00:11   \n",
+       "1  nyt://article/64313d07-de22-5b8b-9216-8175c206...  2020-11-11 10:00:32   \n",
+       "2  nyt://article/562aed49-c6c8-5ce4-9962-f4a1bbee...  2020-11-11 19:10:13   \n",
+       "\n",
+       "    date_only                                           abstract doc_type  \\\n",
+       "0  2020-11-05  Environmental groups argue that exploratory dr...  article   \n",
+       "1  2020-11-11  The fuel could play an important role in fight...  article   \n",
+       "2  2020-11-11  Amid growing alarm about methane’s role in dri...  article   \n",
+       "\n",
+       "                                       main_headline  \\\n",
+       "0  Norway’s Supreme Court Hears Rights Challenge ...   \n",
+       "1  California Is Trying to Jump-Start the Hydroge...   \n",
+       "2  New Technology Claims to Pinpoint Even Small M...   \n",
+       "\n",
+       "                                            keywords  newsdesk  \\\n",
+       "0  [{'name': 'glocations', 'value': 'Norway', 'ra...   Foreign   \n",
+       "1  [{'name': 'subject', 'value': 'Automobiles', '...  Business   \n",
+       "2  [{'name': 'subject', 'value': 'Global Warming'...   Climate   \n",
+       "\n",
+       "                                                 url  \\\n",
+       "0  https://www.nytimes.com/2020/11/05/world/europ...   \n",
+       "1  https://www.nytimes.com/2020/11/11/business/hy...   \n",
+       "2  https://www.nytimes.com/2020/11/11/climate/met...   \n",
+       "\n",
+       "                    retrieved  \n",
+       "0  2020-11-11 15:34:40.359680  \n",
+       "1  2020-11-11 15:34:40.359680  \n",
+       "2  2020-11-11 15:34:40.359680  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>Date</th>\n      <th>date_only</th>\n      <th>abstract</th>\n      <th>doc_type</th>\n      <th>main_headline</th>\n      <th>keywords</th>\n      <th>newsdesk</th>\n      <th>url</th>\n      <th>retrieved</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>nyt://article/3700d15f-8708-51a9-8c90-a71fe280...</td>\n      <td>2020-11-05 08:00:11</td>\n      <td>2020-11-05</td>\n      <td>Environmental groups argue that exploratory dr...</td>\n      <td>article</td>\n      <td>Norway’s Supreme Court Hears Rights Challenge ...</td>\n      <td>[{'name': 'glocations', 'value': 'Norway', 'ra...</td>\n      <td>Foreign</td>\n      <td>https://www.nytimes.com/2020/11/05/world/europ...</td>\n      <td>2020-11-11 15:34:40.359680</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>nyt://article/64313d07-de22-5b8b-9216-8175c206...</td>\n      <td>2020-11-11 10:00:32</td>\n      <td>2020-11-11</td>\n      <td>The fuel could play an important role in fight...</td>\n      <td>article</td>\n      <td>California Is Trying to Jump-Start the Hydroge...</td>\n      <td>[{'name': 'subject', 'value': 'Automobiles', '...</td>\n      <td>Business</td>\n      <td>https://www.nytimes.com/2020/11/11/business/hy...</td>\n      <td>2020-11-11 15:34:40.359680</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>nyt://article/562aed49-c6c8-5ce4-9962-f4a1bbee...</td>\n      <td>2020-11-11 19:10:13</td>\n      <td>2020-11-11</td>\n      <td>Amid growing alarm about methane’s role in dri...</td>\n      <td>article</td>\n      <td>New Technology Claims to Pinpoint Even Small M...</td>\n      <td>[{'name': 'subject', 'value': 'Global Warming'...</td>\n      <td>Climate</td>\n      <td>https://www.nytimes.com/2020/11/11/climate/met...</td>\n      <td>2020-11-11 15:34:40.359680</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "source": [
+    "recents_call.frame"
    ]
   },
   {
@@ -671,20 +735,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "2020-11-08\n"
+      "2020-11-11\n"
      ]
     }
    ],
    "source": [
     "import datetime as dt\n",
-    "\n",
     "print(dt.date.today())"
    ]
   },
