energy env in gitignore

--- a/3_testing.ipynb
+++ b/3_testing.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "Python 3.8.3 64-bit (conda)",
+   "name": "python3",
    "display_name": "Python 3.8.3 64-bit (conda)",
    "metadata": {
     "interpreter": {
@@ -28,20 +28,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
+      "warning: LF will be replaced by CRLF in 1_MainAnalysis.ipynb.\n",
+      "The file will have its original line endings in your working directory\n",
       "warning: LF will be replaced by CRLF in 3_testing.ipynb.\n",
       "The file will have its original line endings in your working directory\n",
-      "[master 7296991a] energy env in gitignore\n",
-      " 2 files changed, 179 insertions(+), 172 deletions(-)\n",
-      " rewrite data_update_script.py (94%)\n",
+      "warning: LF will be replaced by CRLF in .ipynb_checkpoints/1_MainAnalysis-checkpoint.ipynb.\n",
+      "The file will have its original line endings in your working directory\n",
+      "warning: LF will be replaced by CRLF in .ipynb_checkpoints/MainRedux-checkpoint.ipynb.\n",
+      "The file will have its original line endings in your working directory\n",
+      "warning: LF will be replaced by CRLF in MainRedux.ipynb.\n",
+      "The file will have its original line endings in your working directory\n",
+      "[master e786fa27] energy env in gitignore\n",
+      " 10 files changed, 1147 insertions(+), 169 deletions(-)\n",
+      " create mode 100644 .ipynb_checkpoints/1_MainAnalysis-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/MainRedux-checkpoint.ipynb\n",
+      " create mode 100644 MainRedux.ipynb\n",
+      " create mode 100644 __pycache__/application_components.cpython-38.pyc\n",
       "To https://github.com/thekhan314/CrudeOilApp.git\n",
-      "   c88de825..7296991a  master -> master\n"
+      "   7296991a..e786fa27  master -> master\n"
      ]
     }
    ],
