yann fixed the cron but the latest news wont load?

--- a/3_testing.ipynb
+++ b/3_testing.ipynb
@@ -28,7 +28,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Updating 239d5554..f57acefaFrom https://github.com/thekhan314/CrudeOilApp\n",
+      "   239d5554..f57acefa  master     -> origin/master\n",
+      "\n",
+      "Fast-forward\n",
+      " __pycache__/common.cpython-36.pyc             | Bin 0 -> 239 bytes\n",
+      " __pycache__/data_functions.cpython-36.pyc     | Bin 0 -> 6961 bytes\n",
+      " bash_update                                   |   7 +++++++\n",
+      " common.py                                     |   4 ++++\n",
+      " data_functions.py                             |  10 ++++++----\n",
+      " data_update_script.py                         |  14 +++++++-------\n",
+      " datashop/__pycache__/__init__.cpython-36.pyc  | Bin 375 -> 375 bytes\n",
+      " datashop/__pycache__/dataframe.cpython-36.pyc | Bin 1905 -> 1905 bytes\n",
+      " datashop/__pycache__/datashop.cpython-36.pyc  | Bin 13086 -> 13086 bytes\n",
+      " datashop/__pycache__/feature.cpython-36.pyc   | Bin 6762 -> 6762 bytes\n",
+      " datashop/__pycache__/imports.cpython-36.pyc   | Bin 1028 -> 1028 bytes\n",
+      " 11 files changed, 24 insertions(+), 11 deletions(-)\n",
+      " create mode 100644 __pycache__/common.cpython-36.pyc\n",
+      " create mode 100644 __pycache__/data_functions.cpython-36.pyc\n",
+      " create mode 100755 bash_update\n",
+      " create mode 100644 common.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git pull"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -37,22 +73,23 @@
      "text": [
       "warning: LF will be replaced by CRLF in 3_testing.ipynb.\n",
       "The file will have its original line endings in your working directory\n",
-      "[master 2a5f7eaa] energy env in gitignore\n",
-      " 2 files changed, 6 insertions(+), 18 deletions(-)\n",
+      "[master 239d5554] energy env in gitignore\n",
+      " 2 files changed, 178 insertions(+), 178 deletions(-)\n",
+      " rewrite data_update_script.py (94%)\n",
       "To https://github.com/thekhan314/CrudeOilApp.git\n",
-      "   27dbcb08..2a5f7eaa  master -> master\n"
+      "   2a5f7eaa..239d5554  master -> master\n"
      ]
     }
    ],
    "source": [
     "!git add .\n",
-    "!git commit -m \"energy env in gitignore\"\n",
+    "!git commit -m \"yann fixed the cron but the latest news wont load?\"\n",
     "!git push"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,6 +116,13 @@
     "#test_bulk = jsons_to_frame(path,relpath,conn)\n",
     "#test_bulk.to_csv('data/nyt_api/nyt_articles.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -734,20 +778,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "2020-11-11\n"
+      "2020-11-12\n"
      ]
     }
    ],
    "source": [
     "import datetime as dt\n",
-    "print(dt.date.today())"
+    "print(dt.datetime.today().date())"
    ]
   },
   {
