--- a/3_testing.ipynb
+++ b/3_testing.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -73,10 +73,10 @@
      "text": [
       "warning: LF will be replaced by CRLF in 3_testing.ipynb.\n",
       "The file will have its original line endings in your working directory\n",
-      "[master 5f0a0eda] yann fixed the cron but the latest news wont load?\n",
-      " 1 file changed, 5 insertions(+), 5 deletions(-)\n",
+      "[master f4fd1a05] yann fixed the cron but the latest news wont load?\n",
+      " 2 files changed, 6 insertions(+), 7 deletions(-)\n",
       "To https://github.com/thekhan314/CrudeOilApp.git\n",
-      "   ab7d80f0..5f0a0eda  master -> master\n"
+      "   5f0a0eda..f4fd1a05  master -> master\n"
      ]
     }
    ],
