--- a/3_testing.ipynb
+++ b/3_testing.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -73,10 +73,10 @@
      "text": [
       "warning: LF will be replaced by CRLF in 3_testing.ipynb.\n",
       "The file will have its original line endings in your working directory\n",
-      "[master 8c48a55e] yann fixed the cron but the latest news wont load?\n",
-      " 2 files changed, 4 insertions(+), 5 deletions(-)\n",
+      "[master 4e2bf512] yann fixed the cron but the latest news wont load?\n",
+      " 1 file changed, 4 insertions(+), 4 deletions(-)\n",
       "To https://github.com/thekhan314/CrudeOilApp.git\n",
-      "   f4fd1a05..8c48a55e  master -> master\n"
+      "   8c48a55e..4e2bf512  master -> master\n"
      ]
     }
    ],
