yann fixed the cron but the latest news wont load?

--- a/3_testing.ipynb
+++ b/3_testing.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -73,17 +73,17 @@
      "text": [
       "warning: LF will be replaced by CRLF in 3_testing.ipynb.\n",
       "The file will have its original line endings in your working directory\n",
-      "[master 4e2bf512] yann fixed the cron but the latest news wont load?\n",
-      " 1 file changed, 4 insertions(+), 4 deletions(-)\n",
+      "[master 8dff7125] yann fixed the cron but the latest news wont load?\n",
+      " 2 files changed, 5 insertions(+), 5 deletions(-)\n",
       "To https://github.com/thekhan314/CrudeOilApp.git\n",
-      "   8c48a55e..4e2bf512  master -> master\n"
+      "   4e2bf512..8dff7125  master -> master\n"
      ]
     }
    ],
    "source": [
     "!git add .\n",
     "!git commit -m \"yann fixed the cron but the latest news wont load?\"\n",
-    "!git push"
+    "!git push\n"
    ]
   },
   {
