updated update script to not put redundant entries in db anymore

--- a/3_testing.ipynb
+++ b/3_testing.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -46,11 +46,10 @@
      "text": [
       "warning: LF will be replaced by CRLF in 3_testing.ipynb.\n",
       "The file will have its original line endings in your working directory\n",
-      "[master 237acea4] updated update script to not put redundant entries in db anymore\n",
-      " 4 files changed, 380 insertions(+), 845 deletions(-)\n",
-      " rewrite 3_testing.ipynb (94%)\n",
+      "[master 29c67dde] updated update script to not put redundant entries in db anymore\n",
+      " 3 files changed, 184 insertions(+), 10 deletions(-)\n",
       "To https://github.com/thekhan314/CrudeOilApp.git\n",
-      "   aaba7b47..237acea4  master -> master\n"
+      "   237acea4..29c67dde  master -> master\n"
      ]
     }
    ],
@@ -155,14 +154,36 @@
    ],
    "source": [
     "# Lates News\n",
-    "last_archive_date= \"2020-10-23 17:54:49.445231\"\t\n",
     "\n",
-    "end_date = \"2020-10-30 08:00:49.445231\"\n",
+    "query = \" SELECT MAX(Date) FROM news LIMIT 1\"\n",
+    "last_archive_date = str(conn.execute(query).fetchall()[0][0])\n",
+    "\n",
+    "end_date = str(dtime.datetime.today().date())\n",
     "\n",
     "query = 'Oil (Petroleum) and Gasoline'\n",
     "\n",
     "recents_call = nytResp(last_archive_date,end_date,query)\n",
-    "recents_call.frame.sort_values(by='Date').head(10)"
+    "\n",
+    "if recents_call.hits > 0:\n",
+    "\n",
+    "    df_hits = recents_call.frame\n",
+    "\n",
+    "    query_lastnews = \" SELECT * FROM news ORDER BY Date DESC LIMIT 50\"\n",
+    "    df_lastnews = pd.read_sql(query_lastnews,conn)\n",
+    "    df_lastnews = df_lastnews[['Date','abstract''id']]\n",
+    "\n",
+    "    df_hits = df_hits[~df_hits['id'].isin(df_lastnews['id'])]\n",
+    "    \n",
+    "    \n",
+    "    hits = len(df_hits)   \n",
+    "\n",
+    "    if hits > 0:               \n",
+    "        \n",
+    "        records = df_hits[['abstract','Date','url']].to_dict(orient='records')\n",
+    "        for record in records:\n",
+    "            log_dict['News'].append(record)\n",
+    "\n",
+    "        df_hits.to_sql('news',conn,if_exists='append')"
    ]
   },
   {
