updated update script to not put redundant entries in db anymore

--- a/3_testing.ipynb
+++ b/3_testing.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -46,10 +46,10 @@
      "text": [
       "warning: LF will be replaced by CRLF in 3_testing.ipynb.\n",
       "The file will have its original line endings in your working directory\n",
-      "[master 29c67dde] updated update script to not put redundant entries in db anymore\n",
-      " 3 files changed, 184 insertions(+), 10 deletions(-)\n",
+      "[master 5d767d9f] updated update script to not put redundant entries in db anymore\n",
+      " 1 file changed, 29 insertions(+), 8 deletions(-)\n",
       "To https://github.com/thekhan314/CrudeOilApp.git\n",
-      "   237acea4..29c67dde  master -> master\n"
+      "   29c67dde..5d767d9f  master -> master\n"
      ]
     }
    ],
@@ -87,6 +87,23 @@
     "\n",
     "#test_bulk = jsons_to_frame(path,relpath,conn)\n",
     "#test_bulk.to_csv('data/nyt_api/nyt_articles.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Update ran on 2020-11-13 16:12:19.547135. No issues\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Update ran on {}. No issues'.format(str(dt.datetime.now())))\n"
    ]
   },
   {
