updated update script to not put redundant entries in db anymore

--- a/3_testing.ipynb
+++ b/3_testing.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -46,10 +46,10 @@
      "text": [
       "warning: LF will be replaced by CRLF in 3_testing.ipynb.\n",
       "The file will have its original line endings in your working directory\n",
-      "[master 5d767d9f] updated update script to not put redundant entries in db anymore\n",
-      " 1 file changed, 29 insertions(+), 8 deletions(-)\n",
+      "[master 7b15503c] updated update script to not put redundant entries in db anymore\n",
+      " 2 files changed, 23 insertions(+), 4 deletions(-)\n",
       "To https://github.com/thekhan314/CrudeOilApp.git\n",
-      "   29c67dde..5d767d9f  master -> master\n"
+      "   5d767d9f..7b15503c  master -> master\n"
      ]
     }
    ],
@@ -91,14 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Update ran on 2020-11-13 16:12:19.547135. No issues\n"
+      "2020-11-13\n"
      ]
     }
    ],
