updated update script to not put redundant entries in db anymore

--- a/3_testing.ipynb
+++ b/3_testing.ipynb
@@ -28,16 +28,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Updating 764d5dcb..7ae90da1\n",
+      "Fast-forward\n",
+      " __pycache__/__init__.cpython-36.pyc               | Bin 3199 -> 6263 bytes\n",
+      " __pycache__/application_components.cpython-36.pyc | Bin 4923 -> 4942 bytes\n",
+      " __pycache__/common.cpython-36.pyc                 | Bin 239 -> 239 bytes\n",
+      " __pycache__/data_functions.cpython-36.pyc         | Bin 6961 -> 6983 bytes\n",
+      " __pycache__/wsgi.cpython-36.pyc                   | Bin 181 -> 181 bytes\n",
+      " data_update_script.py                             |   2 +-\n",
+      " 6 files changed, 1 insertion(+), 1 deletion(-)\n",
+      "From https://github.com/thekhan314/CrudeOilApp\n",
+      "   764d5dcb..7ae90da1  master     -> origin/master\n"
+     ]
+    }
+   ],
    "source": [
     "!git pull"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -46,10 +64,10 @@
      "text": [
       "warning: LF will be replaced by CRLF in 3_testing.ipynb.\n",
       "The file will have its original line endings in your working directory\n",
-      "[master 7b15503c] updated update script to not put redundant entries in db anymore\n",
-      " 2 files changed, 23 insertions(+), 4 deletions(-)\n",
+      "[master 764d5dcb] updated update script to not put redundant entries in db anymore\n",
+      " 2 files changed, 8 insertions(+), 7 deletions(-)\n",
       "To https://github.com/thekhan314/CrudeOilApp.git\n",
-      "   5d767d9f..7b15503c  master -> master\n"
+      "   7b15503c..764d5dcb  master -> master\n"
      ]
     }
    ],
