updated update script to not put redundant entries in db anymore

--- a/3_testing.ipynb
+++ b/3_testing.ipynb
@@ -37,9 +37,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "warning: LF will be replaced by CRLF in 3_testing.ipynb.\n",
+      "The file will have its original line endings in your working directory\n",
+      "[master d664a2da] updated update script to not put redundant entries in db anymore\n",
+      " 4 files changed, 343 insertions(+), 422 deletions(-)\n",
+      " rewrite 3_testing.ipynb (85%)\n",
+      "To https://github.com/thekhan314/CrudeOilApp.git\n",
+      "   39767b86..d664a2da  master -> master\n"
+     ]
+    }
+   ],
    "source": [
     "!git add .\n",
     "!git commit -m \"updated update script to not put redundant entries in db anymore\"\n",
