updated update script to not put redundant entries in db anymore

--- a/3_testing.ipynb
+++ b/3_testing.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -46,11 +46,10 @@
      "text": [
       "warning: LF will be replaced by CRLF in 3_testing.ipynb.\n",
       "The file will have its original line endings in your working directory\n",
-      "[master d664a2da] updated update script to not put redundant entries in db anymore\n",
-      " 4 files changed, 343 insertions(+), 422 deletions(-)\n",
-      " rewrite 3_testing.ipynb (85%)\n",
+      "[master bbbdedb8] updated update script to not put redundant entries in db anymore\n",
+      " 1 file changed, 16 insertions(+), 2 deletions(-)\n",
       "To https://github.com/thekhan314/CrudeOilApp.git\n",
-      "   39767b86..d664a2da  master -> master\n"
+      "   d664a2da..bbbdedb8  master -> master\n"
      ]
     }
    ],
