--- a/3_testing.ipynb
+++ b/3_testing.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -46,10 +46,10 @@
      "text": [
       "warning: LF will be replaced by CRLF in 3_testing.ipynb.\n",
       "The file will have its original line endings in your working directory\n",
-      "[master bbbdedb8] updated update script to not put redundant entries in db anymore\n",
-      " 1 file changed, 16 insertions(+), 2 deletions(-)\n",
+      "[master 3a69ed2f] updated update script to not put redundant entries in db anymore\n",
+      " 4 files changed, 19 insertions(+), 15 deletions(-)\n",
       "To https://github.com/thekhan314/CrudeOilApp.git\n",
-      "   d664a2da..bbbdedb8  master -> master\n"
+      "   bbbdedb8..3a69ed2f  master -> master\n"
      ]
     }
    ],
