updated update script to not put redundant entries in db anymore

--- a/3_testing.ipynb
+++ b/3_testing.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -46,10 +46,10 @@
      "text": [
       "warning: LF will be replaced by CRLF in 3_testing.ipynb.\n",
       "The file will have its original line endings in your working directory\n",
-      "[master f32309b4] updated update script to not put redundant entries in db anymore\n",
-      " 1 file changed, 4 insertions(+), 4 deletions(-)\n",
+      "[master f68f67b1] updated update script to not put redundant entries in db anymore\n",
+      " 2 files changed, 11 insertions(+), 4 deletions(-)\n",
       "To https://github.com/thekhan314/CrudeOilApp.git\n",
-      "   3a69ed2f..f32309b4  master -> master\n"
+      "   f32309b4..f68f67b1  master -> master\n"
      ]
     }
    ],
