MOdeling with Portilla

--- a/1_MainAnalysis.ipynb
+++ b/1_MainAnalysis.ipynb
@@ -32,7 +32,7 @@
    ],
    "source": [
     "!git add .\n",
-    "!git commit -m \"News Report is working (but not live updating)\"\n",
+    "!git commit -m \"MOdeling with Portilla\"\n",
     "!git push"
    ]
   },
