--- a/1_MainAnalysis.ipynb
+++ b/1_MainAnalysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-27T22:33:00.348860Z",
@@ -18,15 +18,21 @@
    },
    "outputs": [
     {
-     "name": "stderr",
      "output_type": "stream",
+     "name": "stderr",
      "text": [
+      "warning: LF will be replaced by CRLF in .ipynb_checkpoints/MainRedux-checkpoint.ipynb.\n",
+      "The file will have its original line endings in your working directory\n",
       "warning: LF will be replaced by CRLF in 1_MainAnalysis.ipynb.\n",
       "The file will have its original line endings in your working directory\n",
-      "[master e6e8f15] News Report is working (but not live updating)\n",
-      " 1 file changed, 39 insertions(+), 10 deletions(-)\n",
+      "warning: LF will be replaced by CRLF in 3_testing.ipynb.\n",
+      "The file will have its original line endings in your working directory\n",
+      "warning: LF will be replaced by CRLF in MainRedux.ipynb.\n",
+      "The file will have its original line endings in your working directory\n",
+      "[master 41acdfad] MOdeling with Portilla\n",
+      " 4 files changed, 53045 insertions(+), 46 deletions(-)\n",
       "To https://github.com/thekhan314/CrudeOilApp.git\n",
-      "   464f54a..e6e8f15  master -> master\n"
+      "   e428a5e6..41acdfad  master -> master\n"
      ]
     }
    ],
@@ -588,7 +594,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.3-final"
   },
   "toc": {
    "base_numbering": 1,
